--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* Main page */
+/* global */
 body {
   font-family: 'Poppins', sans-serif;
   font-size: 18px;
@@ -10,6 +10,7 @@ body {
   margin: 0 auto;
 }
 
+/* header main page */
 .header__inner {
   display: flex;
   justify-content: space-between;
@@ -44,6 +45,22 @@ body {
   text-decoration: none;
 }
 
+/* authorization main page */
+.authorization__content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.authorization__info {
+  max-width: 490px;
+  width: 100%;
+  padding: 50px 15px 50px 15px;
+  margin: 0 auto;
+}
+
 .authorization__name {
   font-size: 48px;
   font-weight: 600;
@@ -53,39 +70,6 @@ body {
 .authorization__text {
   font-size: 16px;
   margin-bottom: 56px;
-}
-
-.authorization__inner {
-  position: relative;
-}
-
-.authorization__inner:after {
-  content: '';
-  position: fixed;
-  top: 78px;
-  right: 0;
-  background-image: url('../images/bg.jpg');
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 50vw;
-  height: calc(100vh - 78px);
-  z-index: -1;
-}
-
-.authorization__content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: calc(100vh - 78px);;
-  width: 50vw;
-}
-
-.authorization__info {
-  max-width: 490px;
-  width: 100%;
-  margin: 0 auto;
-  padding: 50px 15px 50px 15px;
 }
 
 .authorization__link {
@@ -178,6 +162,15 @@ body {
 .authorization__agreement {
   font-size: 14px;
   text-align: center;
+}
+
+.authorization__image {
+  position: relative;
+  top: 0;
+  right: 0;
+  width: 50vw;
+  height: calc(100vh - 72px);
+  object-fit: cover;
 }
 
 /* Sign up page, Log in page */
@@ -366,6 +359,9 @@ body {
 }
 
 .form__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: #ffffff;
   background-color: #000000;
   width: 100%;
@@ -388,6 +384,48 @@ body {
   background-color: rgba(0, 0, 0, 0.7);
 }
 
+.form__button[disabled] {
+  cursor: not-allowed;
+}
+
+.form__button[disabled]:active {
+  transform: translateY(0);
+}
+
+.form__loader {
+  display: none;
+  position: relative;
+  margin-left: 15px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: conic-gradient(lightgray, transparent);
+
+  animation: rotating 1s linear infinite;
+}
+
+.form__loader::before {
+  content: '';
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.7);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@keyframes rotating {
+    from {
+        transform: rotate(360deg);
+        
+    }
+    to {
+        transform: rotate(0deg);
+    }
+}
+
 .main__privacy-policy {
   font-size: 15px;
 }
@@ -405,14 +443,6 @@ body {
 }
   
 @media (max-width: 992px) {
-    .authorization__inner:after {
-      opacity: 0.2;
-      width: 100vw;
-    }
-
-    .authorization__content {
-      width: 100%;
-    }
 
     .authorization__link {
       background-color: rgba(255, 255, 255, 0.6);
@@ -440,6 +470,10 @@ body {
     .form__item {
       margin-bottom: 0;
     }
+
+    .authorization__image {
+      object-fit: contain;
+    }
 }
   
 @media (max-height: 810px) and (orientation: landscape) {
@@ -464,11 +498,6 @@ body {
 
     .authorization__name {
       font-size: 18px;
-    }
-
-    .authorization__inner:after {
-      top: 66px;
-      height: calc(100vh - 66px);
     }
 
     .authorization__text {
@@ -556,11 +585,6 @@ body {
       font-size: 16px;
     }
 
-    .authorization__inner:after {
-      top: 66px;
-      height: calc(100vh - 66px);
-    }
-
     .authorization__name {
       font-size: 18px;
     }
@@ -596,10 +620,6 @@ body {
       font-size: 14px;
     }
 
-    .main__inner {
-      padding: 15px;
-    }
-
     .main__log-in {
       padding: 10px 10px 10px 10px;
     }
@@ -631,5 +651,9 @@ body {
 
     .form__button {
       padding: 7px;
+    }
+
+    .authorization__image {
+      display: none;
     }
 }
