--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,8 @@ body {
 /* Sign up page, Log in page */
 .main__sign-in:after,
 .main__log-in:after {
+  padding: 10px;
+  position: absolute;
   content: '';
   top: 84px;
   right: 0;
@@ -190,24 +192,14 @@ body {
   z-index: -1;
 }
 
-.main__sign-in {
-  padding-left: 10px;
-  padding-right: 10px;
+.main__sign-in,
+.main__log-in {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
   height: calc(100vh - 84px);
-}
-
-.main__log-in {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: calc(100vh - 84px);
-  padding-left: 10px;
-  padding-right: 10px;
 }
 
 .main__inner {
@@ -449,10 +441,45 @@ body {
     }
 
     .main__inner {
-    padding: 10px;
-  }
+      padding: 20px;
+    }
+
+    .authorization__span::before,
+    .authorization__span::after {
+      width: 125px;
+      top: 40px;
+    }
 }
-  
+
+@media (max-height: 810px) and (orientation: landscape) {
+    .main__sign-in,
+    .main__log-in {
+      height: 100%;
+    }
+
+    .main__description {
+      font-size: 10px;
+      margin-bottom: 20px;
+    }
+
+    .authorization__info {
+      padding: 25px 15px 25px 15px;
+    }
+
+    .main__log-in {
+      padding: 10px;
+      height: 100%;
+    }
+
+    .authorization__image {
+      display: none;
+    }
+
+    .form__block {
+      margin-bottom: 10px;
+    }
+}
+
 @media (max-width: 768px) {
     .main__description {
       margin-bottom: 20px;
@@ -471,38 +498,34 @@ body {
       margin-bottom: 0;
     }
 
-    .authorization__image {
-      object-fit: contain;
-    }
-}
-  
-@media (max-height: 810px) and (orientation: landscape) {
-    .main__sign-in {
-      display: block;
+    .authorization__span {
+      padding: 10px;
     }
 
-    .main__log-in {
-      display: block;
+    .authorization__span::before,
+    .authorization__span::after {
+      top: 25px;
+    }
+
+    .authorization__image {
+      display: none;
     }
 }
 
 @media (max-height: 580px) and (orientation: landscape){
     .header__inner {
+      font-size: 14px;
       padding: 10px 5px;
     }
 
     .authorization__info {
+      padding: 25px 15px 25px 15px;
       margin: 0;
       max-width: 100%;
     }
 
-    .authorization__name {
-      font-size: 18px;
-    }
-
     .authorization__text {
-      font-size: 12px;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
     }
 
     .authorization__links {
@@ -512,8 +535,6 @@ body {
     }
 
     .authorization__link {
-      font-size: 12px;
-      max-width: 200px;
       margin-bottom: 0;
       margin-right: 3px;
     }
@@ -523,23 +544,31 @@ body {
       height: 28px;
     }
 
-    .authorization__span {
-      padding: 5px;
-    }
-
     .authorization__btn {
       margin: 0 auto;
-      margin-bottom: 7px;
+      margin-bottom: 15px;
       width: 300px;
+      padding: 6px;
     }
 
     .authorization__agreement {
       font-size: 12px;
     }
 
-    .main__sign-in:after {
-      top: 74px;
-      height: calc(100vh - 74px);
+    .main__sign-in {
+      padding: 10px;
+      height: 100%;
+    }
+
+    .main__sign-in:after,
+    .main__log-in:after {
+      top: 62px;
+      height: calc(100vh - 62px);
+    }
+
+    .main__description {
+      font-size: 10px;
+      margin-bottom: 10px;
     }
 
     .form__log-in {
@@ -553,12 +582,6 @@ body {
     }
 }
 
-@media (max-width: 600px) and (max-height: 700px) {
-  .main__sign-in {
-      display: block;
-    }
-}
-
 @media (max-width: 576px) {
 
     .header__menu {
@@ -569,10 +592,15 @@ body {
       padding: 10px 5px;
     }
 
+    .main__sign-in {
+      padding: 10px;
+      height: 100%;
+    }
+
     .main__sign-in:after,
     .main__log-in:after {
-      top: 66px;
-      height: calc(100vh - 66px);
+      top: 62px;
+      height: calc(100vh - 62px);
     }
 
     .header__menu-mobile {
@@ -629,7 +657,7 @@ body {
     }
 
     .main__description {
-      font-size: 14px;
+      font-size: 10px;
     }
 
     .form__block {
